# cppeak_seminars

./: CMakeLists.txt  README.md  main  program
project_1/: README.md
project_1/include/: mult.h
project_2/: CMakeLists.txt  README.md
project_2/include/: check.h++  check_bad_specials.h++  check_big.h++  check_digit.h++  check_len.h++  check_small.h++  check_specials.h++  specials.h++
project_2/src/: check.cpp  check_bad_specials.cpp  check_big.cpp  check_digit.cpp  check_len.cpp  check_small.cpp  check_specials.cpp  main.cpp  tests.cpp
project_3/: CMakeLists.txt  README.md  apropriateSize.cpp  apropriateSize.hpp  inputSample.cpp  inputSample.hpp  main.cpp  meanDeviation.cpp  meanDeviation.hpp  median.cpp  median.hpp  mode.cpp  mode.h  mode.hpp  safeInput.cpp  safeInput.hpp  tests.cpp
project_3/include/: appropriateSize.hpp  apropriateSize.hpp  inputSample.hpp  meanDeviation.hpp  median.hpp  mode.hpp  safeInput.hpp
project_3/src/: appropriateSize.cpp  apropriateSize.cpp  inputSample.cpp  main  main.cpp  meanDeviation.cpp  median.cpp  mode.cpp  safeInput.cpp  tests.cpp
project_4/: CMakeLists.txt  README.md  checkFile.cpp  checkFile.hpp  countLvls.cpp  countLvls.hpp  help.cpp  help.hpp  log_input.txt  log_output.txt  lvlsInRange.cpp  main.cpp  readFile.cpp  showErrorsWarnings.cpp  showErrorsWarnings.hpp
project_4/include/: lvlsInRange.hpp  readFile.hpp  showErrorsWarnings.hpp  specificLevel.hpp  statisticForPeriod.hpp
project_4/src/: checkFile.cpp  countLvls.cpp  help.cpp  lvlsInRange.cpp  main.cpp  readFile.cpp  showErrorsWarnings.cpp  specificLevel.cpp  statisticForPeriod.cpp
project_5/: To-Do List.md  help.cpp  help.hpp  main.cpp
src/: main.cpp  mult.cpp  tests.cpp
